[package]
name = "ascii-image-cli"
version = "0.1.0"
edition = "2024"
description = "Convert images into ASCII art using a fast Rust CLI"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/ascii_image"
readme = "README.md"
keywords = ["ascii", "image", "cli"]
categories = ["command-line-utilities"]

exclude = [
  "examples/**",
  "assets/**",
  "*.png",
  "*.jpg",
  "*.jpeg",
  "*.gz",
  "target/**"
]


[[bin]]
name = "ascii-image-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
image = "0.24"
rusttype = "0.9"
